--- a/src/components/IssueViewer/IssueViewer.module.css
+++ b/src/components/IssueViewer/IssueViewer.module.css
@@ -18,14 +18,13 @@
   background-color: white;
   width: 100%;
   height: 100%;
-}
-
-#box h1 {
-  margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 #content {
   padding: 20px;
+  flex-grow: 1;
   overflow-y: scroll;
 }
 
@@ -83,13 +82,12 @@
 }
 
 #options button {
-  border-radius: 100%;
   width: 50px;
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-color: transparent; */
+  background-color: transparent;
   border: none;
   cursor: pointer;
 }
