--- a/src/components/IssueViewer/IssueViewer.module.css
+++ b/src/components/IssueViewer/IssueViewer.module.css
@@ -26,7 +26,6 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  background-color: rgba(59, 59, 59, 0.795);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -121,4 +120,21 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
+}
+
+@media screen and (min-width: 720px) {
+
+  #background.open {
+    background-color: rgba(63, 63, 63, 0.6);
+    backdrop-filter: blur(3px);
+  }
+
+  #box {
+    width: 80%;
+    max-width: 1080px;
+    height: 720px;
+    border-radius: 5px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  }
+
 }
