--- a/src/components/IssueViewer/IssueViewer.module.css
+++ b/src/components/IssueViewer/IssueViewer.module.css
@@ -69,6 +69,18 @@
   font-weight: 200;
 }
 
+#description p {
+  position: relative;
+  word-wrap: break-word;
+}
+
+[placeholder]::after {
+  content: attr(placeholder);
+  cursor: text;
+  position: absolute;
+  top: 0;
+}
+
 #firstRow {
   display: flex;
   justify-content: space-between;
