--- a/src/components/IssueViewer/IssueViewer.module.css
+++ b/src/components/IssueViewer/IssueViewer.module.css
@@ -109,6 +109,7 @@
   border-radius: 15px;
   font-weight: 100;
   height: 28px;
+  color: var(--text);
 }
 
 #labelAddButton {
@@ -132,6 +133,7 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
+  color: var(--text);
 }
 
 #statusButtons {
