--- a/src/global.css
+++ b/src/global.css
@@ -14,6 +14,7 @@
   --border: #e0e2e6;
   --border-default: 1px solid var(--border);
   --button: #5297f1;
+  --button-text: white;
   --button-border: #2ea15e;
   --button-hover: #69b65c;
   --button-disabled: #b8b8b8;
@@ -75,6 +76,7 @@ button {
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
+  color: var(--button-text);
 }
 
 button:hover {
