add not started color

--- a/src/components/IssueViewer/IssueViewer.module.css
+++ b/src/components/IssueViewer/IssueViewer.module.css
@@ -146,6 +146,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--background-label);
+  color: var(--text);
 }
 
 #statusButtons button:first-of-type {
