--- a/src/global.css
+++ b/src/global.css
@@ -7,6 +7,7 @@
   --background: #ffffff;
   --background-box: #fffffff0;
   --background-header: #f5f4f4b8;
+  --background-label: rgb(236, 236, 236);
   --background-info: #f1f1f1;
   --background-input: #eff1f3;
   --background-popup: #0000009f;
