--- a/src/components/IssueViewer/IssueViewer.module.css
+++ b/src/components/IssueViewer/IssueViewer.module.css
@@ -150,15 +150,38 @@
   color: var(--text);
 }
 
-#statusButtons button:first-of-type {
+#statusButtons > button {
   border-bottom-right-radius: 0;
   border-top-right-radius: 0;
 }
 
-#statusButtons button:last-of-type {
+#statusButtons > section > button {
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
   width: 40px;
+}
+
+#statusSelector {
+  background-color: rgba(0, 0, 0, 0.176);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
+  z-index: 2;
+  display: flex;
+}
+
+#statusSelector > section {
+  background-color: var(--background);
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  width: 100%;
+  align-self: flex-end;
+}
+
+#statusSelector p {
+  margin: 0;
+  padding: 15px;
 }
 
 @media screen and (min-width: 720px) {
