--- a/src/components/IssueViewer/IssueViewer.module.css
+++ b/src/components/IssueViewer/IssueViewer.module.css
@@ -109,6 +109,7 @@
   border-radius: 15px;
   font-weight: 100;
   height: 28px;
+  color: var(--text);
 }
 
 #labelAddButton {
@@ -132,6 +133,74 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
+  color: var(--text);
+}
+
+#statusButtons {
+  display: flex;
+  align-items: center;
+}
+
+#statusButtons button {
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--background-label);
+  color: var(--text);
+}
+
+#statusButtons > button {
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+}
+
+#statusButtons > section > button {
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+  width: 40px;
+}
+
+#statusSelector {
+  background-color: rgba(0, 0, 0, 0.176);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
+  z-index: 2;
+  display: none;
+}
+
+#statusSelector.visible {
+  display: flex;
+}
+
+#statusSelector > section {
+  background-color: var(--background);
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  width: 100%;
+  align-self: flex-end;
+  border-radius: 15px;
+  overflow: hidden;
+  margin: 15px;
+}
+
+#statusSelector p {
+  margin: 0;
+  padding: 15px;
+}
+
+#statusSelector ul {
+  padding: 0;
+  list-style-type: none;
+  margin: 0;
+}
+
+#statusSelector ul button {
+  width: 100%;
+  justify-content: space-between;
+  border-radius: 0;
 }
 
 @media screen and (min-width: 720px) {
@@ -139,6 +208,22 @@
   #background.open {
     background-color: rgba(63, 63, 63, 0.6);
     backdrop-filter: blur(3px);
+  }
+
+  #statusSelector {
+    background-color: transparent;
+    left: initial;
+    top: initial;
+    height: initial;
+    position: relative;
+  }
+
+  #statusSelector > section {
+    align-self: auto;
+    right: 0;
+    position: absolute;
+    width: 250px;
+    margin: 15px 0 15px;
   }
 
   #box {
