--- a/src/global.css
+++ b/src/global.css
@@ -7,6 +7,7 @@
   --background: #ffffff;
   --background-box: #fffffff0;
   --background-header: #f5f4f4b8;
+  --background-label: rgb(236, 236, 236);
   --background-info: #f1f1f1;
   --background-input: #eff1f3;
   --background-popup: #0000009f;
@@ -14,6 +15,7 @@
   --border: #e0e2e6;
   --border-default: 1px solid var(--border);
   --button: #5297f1;
+  --button-text: white;
   --button-border: #2ea15e;
   --button-hover: #69b65c;
   --button-disabled: #b8b8b8;
@@ -75,6 +77,7 @@ button {
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
+  color: var(--button-text);
 }
 
 button:hover {
