--- a/src/global.css
+++ b/src/global.css
@@ -107,6 +107,10 @@ input {
   font-size: 16px;
 }
 
+input[type="file"] {
+  display: none;
+}
+
 p, li {
   font-weight: 100;
   color: var(--text);
