--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -105,6 +105,13 @@ button.selected {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+}
+
+#timeLists > li > ul > li {
+  border-top: 1px solid rgb(224, 224, 224);
+}
+
+#timeLists > li > ul > li:first-of-type {
   border-top: 1px solid rgb(168, 168, 168);
 }
 
@@ -115,4 +122,6 @@ button.selected {
   display: flex;
   padding: 0;
   align-items: center;
+  background-color: transparent;
+  box-shadow: none;
 }
