--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -122,7 +122,7 @@ button.selected {
   border-top: 1px solid rgb(191, 191, 191);
 }
 
-#timeLists > li > ul > li, #timeLists button {
+#timeLists > li > ul > li {
   width: 100%;
   height: 100%;
   border-radius: 0;
