--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,8 @@
 header {
   display: flex;
   justify-content: space-between;
-  padding: 15px;
+  padding: 0 15px;
+  height: var(--height-header);
   align-items: center;
   z-index: 1;
   position: relative;
@@ -26,6 +27,15 @@ header h1 {
   font-weight: 200;
 }
 
+#addIssueButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+
 #avatarContainer {
   height: 30px;
   width: 30px;
@@ -33,8 +43,44 @@ header h1 {
   display: flex;
 }
 
-#nameContainer {
+#left {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+#left > nav, #nameContainer {
   display: none;
+}
+
+#right {
+  display: flex;
+  gap: 15px;
+}
+
+@media screen and (min-width: 400px) {
+  
+  #left > nav {
+    display: flex;
+    gap: 15px;
+  }
+
+  #left > nav > a {
+    text-decoration: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: 0.15s;
+  }
+
+  #left > nav > a:not(.selected):hover {
+    background-color: #d9deed;
+  }
+
+  .selected {
+    background-color: #d0dcff;
+    font-weight: 400;
+  }
+
 }
 
 @media screen and (min-width: 720px) {
@@ -49,7 +95,7 @@ header h1 {
 
   #nameContainer {
     display: flex;
-    color: gray;
+    color: var(--text);
   }
 
 }
