--- a/src/global.css
+++ b/src/global.css
@@ -21,7 +21,7 @@
   --button-disabled: #b8b8b8;
   --grid: #f8f9fb;
   --height-header: 60px;
-  --link: #2e871e;
+  --link: #5297f1;
   --text: #5f6368;
   --text-important: #101010;
   --box-shadow-default: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -53,6 +53,15 @@
   --button-disabled: #434343;
   --box-shadow-default: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   --sidebar-button: #365336;
+}
+
+a {
+  color: var(--link);
+  font-weight: 300;
+}
+
+a:visited {
+  color: var(--link);
 }
 
 html {
@@ -117,7 +126,7 @@ p, li {
   font-weight: 100;
   color: var(--text);
   line-height: 1.5rem;
-
+  margin: 0;
 }
 
 h1 {
@@ -126,14 +135,3 @@ h1 {
   margin: 0;
 }
 
-main {
-  padding: 0 15px;
-  text-align: center;
-  position: relative;
-  top: calc(0px - var(--height-header));
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  z-index: 0;
-}
