--- a/src/components/Backlog/Backlog.module.css
+++ b/src/components/Backlog/Backlog.module.css
@@ -19,20 +19,25 @@
   display: flex;
   text-align: center;
   gap: 10px;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  padding: 0 15px;
+  box-sizing: border-box;
 }
 
 #taskList {
   display: flex;
   flex-direction: column;
   padding: 0;
-  margin: 0 -15px;
   list-style-type: none;
+  margin: 0;
 }
 
 #taskListContainer {
-  margin-top: var(--height-header);
   display: flex;
   flex-direction: column;
+  margin-top: 15px;
 }
 
 @media screen and (min-width: 720px) {
@@ -42,16 +47,6 @@
     font-weight: 400;
     padding: 10px 15px 10px;
     justify-content: space-between;
-  }
-
-  #taskListContainer {
-    background-color: white;
-    border-radius: 5px;
-    padding: 5px;
-  }
-
-  #taskList {
-    margin: 0;
   }
 
 }
