--- a/src/components/BacklogTask/BacklogTask.module.css
+++ b/src/components/BacklogTask/BacklogTask.module.css
@@ -1,3 +1,11 @@
+.status {
+  border-radius: 100%;
+  height: 20px;
+  width: 20px;
+  padding: 0;
+  flex-shrink: 0;
+}
+
 .task > button {
   width: 100%;
   text-align: left;
@@ -8,12 +16,19 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 5px 15px;
 }
 
 .task > button:hover {
   background-color: rgb(244, 243, 243);
   box-shadow: none;
   border-radius: 5px;
+  cursor: initial;
+}
+
+.task > button > span {
+  display: flex;
+  gap: 15px;
 }
 
 .taskOptions > button {
