--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,6 +6,7 @@ header {
   align-items: center;
   z-index: 1;
   position: relative;
+  border-bottom: 1px solid var(--border);
 }
 
 header h1 {
@@ -25,15 +26,6 @@ header h1 {
   align-items: center;
   gap: 10px;
   font-weight: 200;
-}
-
-#addIssueButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 100%;
-  height: 30px;
-  width: 30px;
 }
 
 #avatarContainer {
@@ -56,6 +48,14 @@ header h1 {
 #right {
   display: flex;
   gap: 15px;
+}
+
+#projectSelector {
+  background-color: var(--background);
+  color: var(--text);
+  border: 1px solid var(--border);
+  padding: 5px 15px;
+  cursor: initial;
 }
 
 @media screen and (min-width: 400px) {
