--- a/src/components/BacklogTask/BacklogTask.module.css
+++ b/src/components/BacklogTask/BacklogTask.module.css
@@ -16,7 +16,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px 15px;
+  padding: 0 15px;
+  min-height: 40px;
   border: 1px solid transparent;
   box-sizing: border-box;
 }
