--- a/src/components/BacklogTask/BacklogTask.module.css
+++ b/src/components/BacklogTask/BacklogTask.module.css
@@ -39,7 +39,7 @@
   border-color: var(--border);
 }
 
-.taskOptions > button {
+.task:hover .taskOptions > button {
   border-radius: 100%;
   height: 30px;
   width: 30px;
@@ -48,4 +48,8 @@
   align-items: center;
   background-color: transparent;
   color: var(--text);
+}
+
+.taskOptions > button {
+  display: none;
 }
