--- a/src/components/BacklogTask/BacklogTask.module.css
+++ b/src/components/BacklogTask/BacklogTask.module.css
@@ -12,11 +12,14 @@
   color: var(--text);
   font-weight: 300;
   background-color: transparent;
-  border-radius: 0;
+  border-radius: 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px 15px;
+  padding: 0 15px;
+  min-height: 40px;
+  border: 1px solid transparent;
+  box-sizing: border-box;
 }
 
 .task > button:hover {
@@ -31,7 +34,12 @@
   gap: 15px;
 }
 
-.taskOptions > button {
+.task.selected > button {
+  background-color:rgb(228, 228, 228);
+  border-color: var(--border);
+}
+
+.task:hover .taskOptions > button {
   border-radius: 100%;
   height: 30px;
   width: 30px;
@@ -40,4 +48,8 @@
   align-items: center;
   background-color: transparent;
   color: var(--text);
+}
+
+.taskOptions > button {
+  display: none;
 }
