--- a/src/components/BacklogTask/BacklogTask.module.css
+++ b/src/components/BacklogTask/BacklogTask.module.css
@@ -1,3 +1,25 @@
+.labels {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  gap: 10px;
+}
+
+.labels > li {
+  display: flex;
+}
+
+.labels > li > button {
+  padding: 0px 10px;
+  background-color: var(--button);
+  border-radius: 30px;
+  font-size: 13px;
+  color: var(--background);
+  pointer-events: all;
+  height: 24px;
+}
+
 .status {
   border-radius: 100%;
   height: 20px;
@@ -116,10 +138,15 @@
   border-color: var(--border);
 }
 
+.taskOptions {
+  gap: 5px;
+}
+
 .task > button:hover + section .taskOptions > button {
   border-radius: 100%;
-  height: 30px;
-  width: 30px;
+  height: 24px;
+  padding: 0;
+  width: 24px;
   display: flex;
   justify-content: center;
   align-items: center;
