--- a/src/global.css
+++ b/src/global.css
@@ -22,6 +22,7 @@
   --grid: #f8f9fb;
   --height-header: 50px;
   --link: #5297f1;
+  --link-selected: #d0dcff;
   --text: #5f6368;
   --text-important: #101010;
   --box-shadow-default: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -134,3 +135,11 @@ h1 {
   margin: 0;
 }
 
+[placeholder]:empty::before {
+  content: attr(placeholder);
+  color: #555; 
+}
+
+[placeholder]:empty:focus::before {
+  content: "";
+}
