6 implement issue descriptions (#26)
* add contenteditable box

* Make placeholder text less readable

* Remove BR

* Prevent user from backspacing the first paragraph

* Prevent user from deleting first paragraph

* double click to open task

* Allow user to update description

--- a/src/global.css
+++ b/src/global.css
@@ -22,6 +22,7 @@
   --grid: #f8f9fb;
   --height-header: 50px;
   --link: #5297f1;
+  --link-selected: #d0dcff;
   --text: #5f6368;
   --text-important: #101010;
   --box-shadow-default: rgba(0, 0, 0, 0.24) 0px 3px 8px;
