--- a/src/components/TaskPopup/TaskPopup.module.css
+++ b/src/components/TaskPopup/TaskPopup.module.css
@@ -38,6 +38,12 @@
   gap: 15px;
 }
 
+#details > section {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
 #placeholder {
   position: fixed;
 }
