--- a/src/global.css
+++ b/src/global.css
@@ -24,6 +24,7 @@
   --link: #5297f1;
   --link-selected: #d0dcff;
   --text: #5f6368;
+  --text-red: #ff4545;
   --text-important: #101010;
   --box-shadow-default: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   --formatter-selected: #aae9ba;
