--- a/src/components/Backlog/Backlog.module.css
+++ b/src/components/Backlog/Backlog.module.css
@@ -45,8 +45,11 @@
   #columnTitles {
     display: flex;
     font-weight: 400;
-    padding: 10px 15px 10px;
+    padding: 0 15px;
+    margin: 0;
+    font-size: 14px;
     justify-content: space-between;
+    list-style: none;
   }
 
 }
