--- a/src/components/BacklogTask/BacklogTask.module.css
+++ b/src/components/BacklogTask/BacklogTask.module.css
@@ -120,6 +120,7 @@
   height: 100%;
   box-sizing: border-box;
   justify-content: space-between;
+  align-items: center;
 }
 
 .task > section:first-of-type > span {
@@ -139,10 +140,6 @@
 }
 
 .taskOptions {
-  gap: 5px;
-}
-
-.task > button:hover + section .taskOptions > button {
   border-radius: 100%;
   height: 24px;
   padding: 0;
@@ -152,11 +149,8 @@
   align-items: center;
   background-color: transparent;
   color: var(--text);
+  z-index: 1;
   pointer-events: all;
-}
-
-.taskOptions > button {
-  display: none;
 }
 
 @media screen and (min-width: 720px) {
