Add task due dates (#29)
* change default labels to "None"

* fix z-index

* save due date

* add due date in popup

* check for potentialBR

* add red variable

* Show due date on backlog

--- a/src/components/TaskPopup/TaskPopup.module.css
+++ b/src/components/TaskPopup/TaskPopup.module.css
@@ -38,6 +38,23 @@
   gap: 15px;
 }
 
+#details > section {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+#details > section > label {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  min-height: 24px;
+}
+
+.expired {
+  color: var(--text-red);
+}
+
 #placeholder {
   position: fixed;
 }
