--- a/src/components/TaskPopup/TaskPopup.module.css
+++ b/src/components/TaskPopup/TaskPopup.module.css
@@ -36,6 +36,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  overflow-y: auto;
 }
 
 #details > section {
@@ -151,6 +152,11 @@
     max-width: 1080px;
     max-height: 720px;
     box-shadow: var(--box-shadow-default);
+  }
+
+  .open #popupContent {
+    height: calc(100% - 41px);
+    box-sizing: border-box;
   }
 
 }
