--- a/src/components/SettingsPage/SettingsPage.module.css
+++ b/src/components/SettingsPage/SettingsPage.module.css
@@ -48,5 +48,8 @@
 }
 
 #main {
-  margin: 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  overflow-y: auto;
+  height: calc(100% - var(--height-header));
 }
