--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,14 +5,7 @@ header {
   height: var(--height-header);
   align-items: center;
   position: relative;
-  border-bottom: 1px solid var(--border);
   z-index: 1;
-}
-
-header h1 {
-  margin: 0;
-  font-size: 20px;
-  font-weight: 400;
 }
 
 #accountButton {
@@ -39,6 +32,13 @@ header h1 {
   display: flex;
   align-items: center;
   gap: 15px;
+}
+
+#left a {
+  font-size: 17px;
+  font-weight: 400;
+  color: black;
+  text-decoration: none;
 }
 
 #left > nav, #nameContainer {
