--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -24,5 +24,27 @@
 }
 
 #options {
-  margin-top: var(--height-header);
+  margin: var(--height-header) -15px 0;
+  border-bottom: 1px solid var(--border);
+  padding: 0 15px;
+  gap: 15px;
+  display: flex;
+  align-items: center;
+  height: var(--height-header);
+  z-index: 1;
+  justify-content: space-between;
+}
+
+#options > button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  height: 30px;
+  background-color: var(--background);
+  color: var(--text);
+  border: 1px solid var(--border);
+  width: 30px;
+  cursor: initial;
+  padding: 0;
 }
