--- a/src/components/BacklogViewModificationOptions/BacklogViewModificationOptions.module.css
+++ b/src/components/BacklogViewModificationOptions/BacklogViewModificationOptions.module.css
@@ -1,17 +1,3 @@
-#addIssueButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 100%;
-  height: 30px;
-  background-color: var(--background);
-  color: var(--text);
-  border: 1px solid var(--border);
-  width: 30px;
-  cursor: initial;
-  padding: 0;
-}
-
 #viewModificationOptions {
   margin: var(--height-header) -15px 0;
   border-bottom: 1px solid var(--border);
@@ -24,12 +10,16 @@
   justify-content: space-between;
 }
 
-#viewModificationOptions > span > button {
+#viewModificationOptions button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
   height: 30px;
-  padding: 0 10px;
-  font-weight: 300;
   background-color: var(--background);
   color: var(--text);
+  border: 1px solid var(--border);
+  width: 30px;
   cursor: initial;
-  flex-shrink: 0;
+  padding: 0;
 }
