space out the options

--- a/src/components/SettingsPage/SettingsPage.module.css
+++ b/src/components/SettingsPage/SettingsPage.module.css
@@ -27,6 +27,11 @@
   gap: 5px;
 }
 
+.labelActions {
+  display: flex;
+  gap: 15px;
+}
+
 .labelBaseInfo {
   display: flex;
   justify-content: space-between;
