--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -1,4 +1,29 @@
-#viewModificationOptions {
+#main {
+  padding: 0 15px;
+  position: relative;
+  top: calc(0px - var(--height-header));
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  z-index: 0;
+}
+
+#noProjectsMessage {
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  display: flex;
+  text-align: center;
+  gap: 10px;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  padding: 0 15px;
+  box-sizing: border-box;
+  z-index: -1;
+}
+
+#options {
   margin: var(--height-header) -15px 0;
   border-bottom: 1px solid var(--border);
   padding: 0 15px;
@@ -10,7 +35,7 @@
   justify-content: space-between;
 }
 
-#viewModificationOptions button {
+#options > button {
   display: flex;
   justify-content: center;
   align-items: center;
