Squeeze backlog and project list to 1080px max width 1080px (#44)
* cap project list container width to 1080px

* Column

* cap tasklist to 1080px width

--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -48,3 +48,15 @@
   cursor: initial;
   padding: 0;
 }
+
+#projectListContainer {
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
+
+#projectListContainer > ul {
+  max-width: 1080px;
+  width: 100%;
+  margin: 15px auto;
+}
