--- a/src/components/BacklogTask/BacklogTask.module.css
+++ b/src/components/BacklogTask/BacklogTask.module.css
@@ -34,16 +34,7 @@
 }
 
 .task {
-  display: flex;
   width: 100%;
-  position: relative;
-}
-
-.task > button {
-  width: 100%;
-  text-align: left;
-  color: var(--text);
-  font-weight: 300;
   background-color: transparent;
   border-radius: 5px;
   display: flex;
@@ -52,42 +43,29 @@
   min-height: 40px;
   border: 1px solid transparent;
   box-sizing: border-box;
-  z-index: 1;
-  padding: 0;
+  padding: 0 15px;
 }
 
-.task > button:hover {
-  background-color: rgb(244, 243, 243);
+.task:hover {
+  background-color: rgb(230, 230, 230);
   box-shadow: none;
   border-radius: 5px;
   cursor: initial;
 }
 
-.task > section:first-of-type {
-  position: absolute;
-  width: 100%;
-  display: flex;
-  padding: 0 15px;
-  height: 100%;
-  box-sizing: border-box;
-  justify-content: space-between;
-  align-items: center;
+.task:hover:active {
+  background-color: rgb(220, 220, 220);
 }
 
-.task > section:first-of-type > span {
-  pointer-events: none;
+.task.selected {
+  background-color: rgb(225, 225, 225);
+  border-color: var(--border);
 }
 
-.task > section > span {
+.task > span {
   display: flex;
   align-items: center;
   gap: 15px;
-  z-index: 1;
-}
-
-.task.selected > button {
-  background-color:rgb(228, 228, 228);
-  border-color: var(--border);
 }
 
 .taskOptions {
