--- a/src/components/ContextMenu/ContextMenu.module.css
+++ b/src/components/ContextMenu/ContextMenu.module.css
@@ -7,11 +7,12 @@
   width: calc(100% - 25px);
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
+  background-color: var(--background);
   z-index: 2;
 }
 
 .menu > ul {
-  padding: 0;
+  padding: 5px;
   margin: 0;
   list-style: none;
 }
@@ -19,7 +20,7 @@
 .menu button {
   width: 100%;
   text-align: left;
-  border-radius: 0;
+  border-radius: 5px;
   font-weight: 300;
   cursor: initial;
   background-color: var(--background);
