--- a/src/components/ContextMenu/ContextMenu.module.css
+++ b/src/components/ContextMenu/ContextMenu.module.css
@@ -25,6 +25,7 @@
   cursor: initial;
   background-color: var(--background);
   color: var(--text);
+  box-shadow: none;
 }
 
 .menuContainer {
@@ -65,6 +66,10 @@
     width: initial;
     justify-content: initial;
     align-items: initial;
+  }
+
+  .menu button:hover {
+    box-shadow: var(--box-shadow-default);
   }
 
 }
